--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -1,8 +1,8 @@
-@import './rainbow.scss';
-@import './vars.scss';
-@import './vitepress.scss';
-@import './medium-zoom.scss';
-@import './tailwind.scss';
-@import './blur.scss';
-@import './scrollbar.scss';
-@import './hidden.scss'
+@use './rainbow.scss';
+@use './vars.scss';
+@use './vitepress.scss';
+@use './medium-zoom.scss';
+@use './tailwind.scss';
+@use './blur.scss';
+@use './scrollbar.scss';
+@use './hidden.scss'
